Added API layer